Create new development package
Signed-off-by: Heinrich Schuchardt <xypron.glpk@gmx.de>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-odroid-c2-kernel (4.9.0.8) unstable; urgency=medium
+odroid-c2-dev-kernel (4.9.0.9) unstable; urgency=medium
 
   * Kernel 4.9-rc8 next-20161209
 
