--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-odroid-c2-dev-kernel (4.11.0.1) unstable; urgency=medium
+odroid-c2-dev-kernel (4.12.0.1) unstable; urgency=medium
 
-  * Kernel 4.11 next-20170503 
+  * Kernel 4.12-rc1
 
- -- Heinrich Schuchardt <xypron.glpk@gmx.de>  Wed, 03 May 2017 08:08:54 +0200
+ -- Heinrich Schuchardt <xypron.glpk@gmx.de>  Sun, 14 May 2017 22:35:56 +0200
