--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+firefly-rk3399-dev-kernel (4.14.15.1) unstable; urgency=medium
+
+  * Kernel 4.14.15
+
+ -- Heinrich Schuchardt <xypron.glpk@gmx.de>  Fri, 26 Jan 2018 18:01:37 +0100
+
 firefly-rk3399-dev-kernel (4.14.0.1) unstable; urgency=medium
 
   * Kernel 4.14-rc2 
