--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+firefly-rk3399-dev-kernel (4.14.0.1) unstable; urgency=medium
+
+  * Kernel 4.15 
+
+ -- Heinrich Schuchardt <xypron.glpk@gmx.de>  Mon, 29 Jan 2018 21:10:41 +0000
+
 firefly-rk3399-dev-kernel (4.14.15.2) unstable; urgency=medium
 
   * Kernel 4.14.15
