--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+firefly-rk3399-dev-kernel (4.16.0.2) unstable; urgency=medium
+
+  * Kernel 4.16
+
+ -- Heinrich Schuchardt <xypron.glpk@gmx.de>  Wed, 04 Apr 2018 22:01:31 +0200
+
 firefly-rk3399-dev-kernel (4.15.1.1) unstable; urgency=medium
 
   * Kernel 4.15.1 
