--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+firefly-rk3399-dev-kernel (4.16.0.3) unstable; urgency=medium
+
+  * Kernel 4.16.13 
+
+ -- Heinrich Schuchardt <xypron.glpk@gmx.de>  Mon, 04 Jun 2018 00:01:50 +0200
+
 firefly-rk3399-dev-kernel (4.16.0.2) unstable; urgency=medium
 
   * Kernel 4.16
