0001-arm64-dts-rockchip-enable-RTC-on-Firefly-RK3399.patch
Signed-off-by: Heinrich Schuchardt <xypron.glpk@gmx.de>

--- a/patch/patch-4.17.1
+++ b/patch/patch-4.17.1
@@ -2,3 +2,4 @@
 git am --abort || true
 
 git am ../patch/0001-arm64-dts-rockchip-correct-voltage-selector-Firefly-.patch
+git am ../patch/0001-arm64-dts-rockchip-enable-RTC-on-Firefly-RK3399.patch
