--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+firefly-rk3399-dev-kernel (4.17.3.1) unstable; urgency=medium
+
+  * Kernel 4.17.3
+
+ -- Heinrich Schuchardt <xypron.glpk@gmx.de>  Sun, 01 Jul 2018 11:04:05 +0200
+
 firefly-rk3399-dev-kernel (4.17.1.1) unstable; urgency=medium
 
   * Kernel 4.17.1
