--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+firefly-rk3399-dev-kernel (4.18.11.1) unstable; urgency=medium
+
+  * Kernel 4.18.11 
+
+ -- Heinrich Schuchardt <xypron.glpk@gmx.de>  Mon, 08 Oct 2018 17:54:05 +0200
+
 firefly-rk3399-dev-kernel (4.17.3.2) unstable; urgency=medium
 
   * Kernel 4.17.3
