--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+firefly-rk3399-dev-kernel (4.19.13.1) unstable; urgency=medium
+
+  * Kernel 4.19.13 
+
+ -- Heinrich Schuchardt <xypron.glpk@gmx.de>  Sun, 06 Jan 2019 23:43:20 +0100
+
 firefly-rk3399-dev-kernel (4.18.11.1) unstable; urgency=medium
 
   * Kernel 4.18.11 
